--- a/index.html
+++ b/index.html
@@ -12,37 +12,78 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Open Source Job Board</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">An Open Source Job Board built with Ruby on Rails</h2>
       <a href="https://github.com/blairanderson/open-source-job-board" class="btn">View on GitHub</a>
       <a href="https://github.com/blairanderson/open-source-job-board/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/blairanderson/open-source-job-board/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="open-source-job-board" class="anchor" href="#open-source-job-board" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Open Source Job Board</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p><strong><a href="https://reactnativejobs.herokuapp.com/">DEMO</a></strong></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><img src="https://cdn.rawgit.com/blairanderson/open-source-job-board/master/public/screenshot.png" alt="Screenshot"></p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>This is the <code>readme.md</code> for a Ruby on Rails application that allows users to create accounts and post job listings.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="why" class="anchor" href="#why" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why?</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Because when i was learning to program, I wanted to play with code that had a familiar model and get some instant gratification.</p>
+
+<p>The problem with learning to code is the learning-curve. Shit is real and painful and i found that the best cure for the pain was cloning an app with features and tweaking until it broke and learning along the way.</p>
+
+<p>I think this is why wordpress is SO popular. Its stupid-easy to fire-up, and changes come with one-click package installs and tiny code changes.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>A visitor can view the list of job posts</li>
+<li>A visitor can view the job form, but is forced to signup before filling it out.</li>
+<li>A visitor can register for an account</li>
+<li>A user can login and logout</li>
+<li>A user can submit a new job post</li>
+<li>Admin dashboard at <code>/admin</code>, config in <code>rails_admin.rb</code> - admin is <code>user.id==1</code>
+</li>
+<li>Posts can be <code>draft, published, archived</code>
+</li>
+</ul>
+
+<h3>
+<a id="deploy" class="anchor" href="#deploy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deploy?</h3>
+
+<p><a href="https://heroku.com/deploy"><img src="https://www.herokucdn.com/deploy/button.png" alt="Deploy"></a></p>
+
+<p><em><a href="https://devcenter.heroku.com/articles/app-json-schema">learn more about</a></em></p>
+
+<h3>
+<a id="change-the-code" class="anchor" href="#change-the-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Change the Code!!!</h3>
+
+<p>My main goal for this is to give new programmers some code to look at and talk about. Anytime i <a href="https://github.com/blairanderson/open-source-job-board/issues">get questions</a>, I plan to add them here...</p>
+
+<p>If you're new to rails, follow this and come back <a href="http://installfest.railsbridge.org/installfest/">http://installfest.railsbridge.org/installfest/</a></p>
+
+<p><em>Open your terminal</em></p>
+
+<div class="highlight highlight-source-shell"><pre>
+$ git clone git@github.com:blairanderson/open-source-job-board.git jobbr
+$ <span class="pl-c1">cd</span> jobbr
+</pre></div>
+
+<p><em>Lets look at some code</em></p>
+
+<p>When someone visits your website, they're literally just <em>request</em>ing some HTML, CSS, and Javascript! <em>requests</em> come to your application through the ROUTER.</p>
+
+<p>SO you type something into google and hit enter, then click to the first result....</p>
+
+<p>your web browser visits a website and the website starts to send HTML and CSS and Javascript.</p>
+
+<h3>
+<a id="checkout-the-routes-file" class="anchor" href="#checkout-the-routes-file" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/blairanderson/open-source-job-board/blob/master/config/routes.rb">Checkout the Routes File</a>
+</h3>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/blairanderson/open-source-job-board">Open Source Job Board</a> is maintained by <a href="https://github.com/blairanderson">blairanderson</a>.</span>
@@ -52,6 +93,16 @@
 
     </section>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-61052500-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
